objects/Partner_Application__c.object
<CustomObject>
    <description>Used to create PA related to Lead.</description>
    <fields>
        <fullName>ABN__c</fullName>
        <label>ABN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abilitazioni_Details__c</fullName>
        <label>Abilitazioni Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abilitazioni_Score__c</fullName>
        <label>Abilitazioni Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Applications</relationshipLabel>
        <relationshipName>Partner_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_License_1_Specify__c</fullName>
        <inlineHelpText>Licenses/Certifications currently held by the Partner candidate</inlineHelpText>
        <label>Additional License 1 (Specify)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_License_2_Specify__c</fullName>
        <inlineHelpText>Licenses/Certifications currently held by the Partner candidate</inlineHelpText>
        <label>Additional License 2 (Specify)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_License_3_Specify__c</fullName>
        <inlineHelpText>Licenses/Certifications currently held by the Partner candidate</inlineHelpText>
        <label>Additional License 3 (Specify)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Bill to Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_1_year_ago_Score__c</fullName>
        <formula>IF (  Annual_Revenue_1_year_ago_YOY__c  &gt;= 50, 3,
IF (  Annual_Revenue_1_year_ago_YOY__c  &gt;= 30, 2,
IF (  Annual_Revenue_1_year_ago_YOY__c  &gt; 20, 1, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Revenue 1 year ago (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_1_year_ago_YOY__c</fullName>
        <formula>if (Annual_Revenue_2_year_ago__c=0, 0, 
100 * (( Annual_Revenue_1_year_ago__c - Annual_Revenue_2_year_ago__c ) / Annual_Revenue_2_year_ago__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Revenue 1 year ago % YOY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_1_year_ago__c</fullName>
        <inlineHelpText>Candidates gross revenue generated last year. If the candidate is not currently selling solar, provide any revenue generated from existing businesses</inlineHelpText>
        <label>Annual Revenue 1 year ago</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_1_year_ago_in_kW__c</fullName>
        <description>Annual Installed capacity 1 year ago in kw:</description>
        <inlineHelpText>Annual Installed capacity 1 year ago in kw:</inlineHelpText>
        <label>Annual Installed capacity 1 yr ago (kw)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_2_year_ago__c</fullName>
        <inlineHelpText>Candidates gross revenue generated two years ago. If the candidate is not currently selling solar, provide any revenue generated from existing businesses</inlineHelpText>
        <label>Annual Revenue 2 year ago</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_2_year_ago_in_kW__c</fullName>
        <description>Annual Installed capacity 2 years ago in kw</description>
        <inlineHelpText>Annual Installed capacity 2 years ago in kw</inlineHelpText>
        <label>Annual Installed capacity 2 yrs ago (kw)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Score__c</fullName>
        <formula>Calculated_Application_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Applications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>At_least_one_branded_truck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>At least one branded truck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>At_least_one_dedicated_salesperson__c</fullName>
        <defaultValue>false</defaultValue>
        <label>At least one dedicated salesperson</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>At_least_one_marketing_person__c</fullName>
        <defaultValue>false</defaultValue>
        <label>At least one marketing person</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>At_least_one_mid_level_employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>At least one mid-level employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Size_Commercial_Projects__c</fullName>
        <label>Average Size Commercial Projects (kW)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Size_Ground_Projects__c</fullName>
        <label>Average Size Ground Projects (kW)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Size_Residential_Projects__c</fullName>
        <label>Average Size Residential Projects (kW)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCSE_Accreditation__c</fullName>
        <label>BCSE Accreditation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCSE_Install__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BCSE Install</description>
        <inlineHelpText>BCSE Install</inlineHelpText>
        <label>BCSE Install</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_Guarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Basic_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Basic Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Basic_commercial_sales_collateral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Basic commercial sales collateral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Basic_sales_collateral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Basic sales collateral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Basics_sales_metrics_tracking_Details__c</fullName>
        <label>Basics sales metrics tracking Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basics_sales_metrics_tracking_Score__c</fullName>
        <label>Basics sales metrics tracking Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <description>Used for Partner Application Billing Address details.</description>
        <label>Bill To City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country__c</fullName>
        <description>Used for Partner Application Billing Address details.</description>
        <label>Bill To Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Postal_Code__c</fullName>
        <description>Used for Partner Application Billing Address details.</description>
        <label>Bill To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_State__c</fullName>
        <description>Used for Partner Application Billing Address details.</description>
        <label>Bill To State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Street__c</fullName>
        <description>Used for Partner Application Billing Address details.</description>
        <label>Bill To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Branded_sales_vehicle_Details__c</fullName>
        <label>Branded sales vehicle Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branded_sales_vehicle_Score__c</fullName>
        <label>Branded sales vehicle Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building_Permits_last_36_months__c</fullName>
        <label>Building Permits (last 36 months)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Plan_1_Details__c</fullName>
        <label>Business Plan 1 Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Plan_1_Score__c</fullName>
        <label>Business Plan 1 Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Plan_2_Details__c</fullName>
        <label>Business Plan 2 Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Plan_2_Score__c</fullName>
        <label>Business Plan 2 Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Plan_Score__c</fullName>
        <formula>IF( Business_Plan__c , 5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Plan (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the candidate have a business plan created with growth/revenue targets for their solar sales</inlineHelpText>
        <label>Business Plan?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_focused_on_PV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business focused on PV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAD_Designer_Available_Score__c</fullName>
        <formula>IF( CAD_Designer_Available__c , 2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAD Designer Available (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAD_Designer_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is there a design resource that can produce Computer-Aided-Designs (AutoCad)</inlineHelpText>
        <label>CAD Designer Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Details__c</fullName>
        <inlineHelpText>If yes, please list what type (Salesforce, Oracle, SugarCRM, etc.)</inlineHelpText>
        <label>CRM Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Score__c</fullName>
        <label>CRM Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the candidate currently utilize Customer Relationship Management software?</inlineHelpText>
        <label>CRM?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Applications4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calculated_Application_Score__c</fullName>
        <label>Calculated Application Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Partner Applications</relationshipLabel>
        <relationshipName>Partner_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>City in which the candidate currently resides</inlineHelpText>
        <label>Bill to City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Customer_Base__c</fullName>
        <inlineHelpText>How many existing commercial customers does the candidate have access to market solar to.</inlineHelpText>
        <label>Commercial Customer Base</label>
        <picklist>
            <picklistValues>
                <fullName>1 - 10 customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - 50 customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51 - 100 customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100+ customers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commercial_Employees_Details__c</fullName>
        <label>Commercial Employees Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Employees_Score__c</fullName>
        <label>Commercial Employees Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commercial_Focus__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>What percentage of their business is focused on commercial opportunities (Residential Focus + Commercial Focus = 100%)</inlineHelpText>
        <label>Commercial Focus</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commercial_PV_installed_to_date__c</fullName>
        <label>Commercial PV installed to date</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commercial_Sales_process_Details__c</fullName>
        <label>Commercial Sales process Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Sales_process_Score__c</fullName>
        <label>Commercial Sales process Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commercial_Systems_installed_to_date__c</fullName>
        <label>Commercial Systems installed to date</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>45</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Phone_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company Phone Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Profitable_Score__c</fullName>
        <formula>IF( Company_Profitable__c , 5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Profitable (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Profitable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the candidate&apos;s current organization profitable?</inlineHelpText>
        <label>Company Profitable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_have_ft_master_electrician__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company have ft master electrician</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_have_fulltime_master_electrician__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does your company have a full-time master electrician?</description>
        <label>Company have fulltime master electrician</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consumer_Reporting_Agency_Score__c</fullName>
        <formula>IF( Consumer_Reporting_Agency__c , 2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consumer Reporting Agency (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consumer_Reporting_Agency__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the candidate currently listed on BBB, or equivalent ratings organization?</inlineHelpText>
        <label>Consumer Reporting Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Applications</relationshipLabel>
        <relationshipName>Partner_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Signatory_Email__c</fullName>
        <label>Contract Signatory Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contract_Signatory__c</fullName>
        <label>Contract Signatory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_License_Number__c</fullName>
        <inlineHelpText>Current, Valid Contractor&apos;s license held by the candidate</inlineHelpText>
        <label>Contractor License Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Bill to Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Report_Score__c</fullName>
        <formula>IF( Credit_Report__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Report (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the candidate provide approval for SunPower to pull a credit report to analyze financial status?</inlineHelpText>
        <label>Credit Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Industry__c</fullName>
        <inlineHelpText>What industry is the candidate currently operating (Construction, HVAC, Windows/Doors, Solar, etc.)</inlineHelpText>
        <label>Current Industry</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Bondable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently Bondable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Base_Score__c</fullName>
        <formula>IF(ISPICKVAL( Residential_Customer_Base__c , &apos;1000+ customers&apos;), 5, 
IF( ISPICKVAL(Residential_Customer_Base__c, &apos;101 - 1000 customers&apos;) , 3,
IF( ISPICKVAL(Residential_Customer_Base__c, &apos;11 - 100 customers&apos;) , 1, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Base (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Base__c</fullName>
        <label>Customer Base</label>
        <picklist>
            <picklistValues>
                <fullName>1 - 10 customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - 100 customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101 - 1000 customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000+ customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - 50 customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51 - 100 customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100+ customers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Employees_Score__c</fullName>
        <formula>IF( Field_Level_Customer_Service_Employees__c + Manager_Customer_Service_Employees__c &gt;=10,5, 
IF(Field_Level_Customer_Service_Employees__c + Manager_Customer_Service_Employees__c &gt;=8,4, 
IF(Field_Level_Customer_Service_Employees__c + Manager_Customer_Service_Employees__c &gt;=6,3, 
IF(Field_Level_Customer_Service_Employees__c + Manager_Customer_Service_Employees__c &gt;=4,2, 
IF(Field_Level_Customer_Service_Employees__c + Manager_Customer_Service_Employees__c&gt;=2,1,0 )))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Service Employees(Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Director_of_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director of Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Applications3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <inlineHelpText>Employee Identification Number (all valid organizations should have one)</inlineHelpText>
        <label>EIN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electrical_Class_A__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Electrical Class A</description>
        <inlineHelpText>Electrical Class A</inlineHelpText>
        <label>Electrical Class A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_Class_C__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Electrical Class C</description>
        <inlineHelpText>Electrical Class C</inlineHelpText>
        <label>Electrical Class C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_Contractor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Electrical Contractor</description>
        <inlineHelpText>Electrical Contractor</inlineHelpText>
        <label>Electrical Contractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_License__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the candidate have a valid electrical contractors license (if applicable within region)</inlineHelpText>
        <label>Electrical License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_Permits_last_36_months__c</fullName>
        <label>Electrical Permits (last 36 months)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrician_Details__c</fullName>
        <label>Electrician Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electrician_Score__c</fullName>
        <label>Electrician Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrician_on_staff_Score__c</fullName>
        <formula>IF( Electrician_on_staff__c ,2,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electrician (on-staff) (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrician_on_staff__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is there an electrician on staff?</inlineHelpText>
        <label>Electrician (on-staff)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employees_Details__c</fullName>
        <label>Employees Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employees_Score__c</fullName>
        <label>Employees Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engineering_Details__c</fullName>
        <label>Engineering Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering_Score__c</fullName>
        <label>Engineering Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Number_of_Employees_next_year__c</fullName>
        <description>Estimated Number of Employees next year</description>
        <inlineHelpText>Estimated Number of Employees next year</inlineHelpText>
        <label>Estimated Number of Employees next year</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Number_of_Employees_this_year__c</fullName>
        <description>Estimated Number of Employees this year</description>
        <inlineHelpText>Estimated Number of Employees this year</inlineHelpText>
        <label>Estimated Number of Employees this year</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_Pending_Litigation_Score__c</fullName>
        <formula>IF( Existing_Pending_Litigation__c , 0, 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Existing/Pending Litigation (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_Pending_Litigation_Specify__c</fullName>
        <inlineHelpText>If yes, specify what type of legal issues (lawsuit, criminal case, civil case, liens, etc.)</inlineHelpText>
        <label>Existing/Pending Litigation Specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Existing_Pending_Litigation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the candidate have any lawsuits or legal issues against themselves, their company?</inlineHelpText>
        <label>Existing/Pending Litigation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field_Level_Customer_Service_Employees__c</fullName>
        <description>Case 385729</description>
        <inlineHelpText>How many Customer Service Employees does the candidate&apos;s organization currently employ?</inlineHelpText>
        <label>Field Level Customer Service Employees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Level_Design_Employees__c</fullName>
        <inlineHelpText>How many Design employees does the candidate&apos;s organization currently have reporting to Design Managers?</inlineHelpText>
        <label>Field Level Design Employees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Level_Employees__c</fullName>
        <formula>Field_Level_Design_Employees__c +  Field_Level_Finance_Employees__c +  
Field_Level_Installation_Employees__c +  Field_Level_Marketing_Employees__c +  Field_Level_Operations_Employees__c +  Field_Level_Other_Employees__c +  
Field_Level_Sales_Employees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field-Level Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Level_Finance_Employees__c</fullName>
        <inlineHelpText>How many Finance employees does the candidate&apos;s organization currently have reporting to Finance Managers?</inlineHelpText>
        <label>Field Level Finance Employees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Level_Installation_Employees__c</fullName>
        <inlineHelpText>How many Install employees does the candidate&apos;s organization currently have reporting to Install Managers?</inlineHelpText>
        <label>Field Level Installation Employees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Level_Marketing_Employees__c</fullName>
        <inlineHelpText>How many Marketing employees does the candidate&apos;s organization currently have reporting to Marketing Managers?</inlineHelpText>
        <label>Field Level Marketing Employees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Level_Operations_Employees__c</fullName>
        <inlineHelpText>How many Operations employees does the candidate&apos;s organization currently have reporting to Operations Managers?</inlineHelpText>
        <label>Field Level Operations Employees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Level_Other_Employees__c</fullName>
        <inlineHelpText>How many other field-level employees are currently employed by the candidate&apos;s organization?</inlineHelpText>
        <label>Field Level Other Employees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Level_Sales_Employees__c</fullName>
        <inlineHelpText>How many salespeople  does the candidate&apos;s organization currently have reporting to Sales Managers?</inlineHelpText>
        <label>Field Level Sales Employees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Level_Technical_Employees__c</fullName>
        <description>Case 385729</description>
        <inlineHelpText>How many Technicians does the candidate&apos;s organization currently employ?</inlineHelpText>
        <label>Field Level Technical Employees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formal_office_workshop_warehouse_Score__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Formal office/workshop/warehouse Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formal_office_workshop_warehouse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Formal office / workshop / warehouse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formalized_Referral_Program_Score__c</fullName>
        <formula>IF ( Formalized_Referral_Program__c , 2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formalized Referral Program (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>